--- a/index.html
+++ b/index.html
@@ -49,7 +49,29 @@
             </ul>
           </nav>
         </div>
+
+        
+
+
+
+
       </div>
     </header>
+
+    <section id="banner">
+      <div class="container">
+        <div id="me">
+        <div>
+          <h6>THIS IS ME</h6>
+          <h1>PHILIP GILBERT</h1>
+          <P>
+            You will begin to realise why this exercise is called the Dickens Pattern with reference to the ghost showing Scrooge some different futures.
+          </P>
+          <a href="#">DISCOVER NOW</a>
+        </div>
+        <div><img src="imgs/hero-img.png.webp" alt="PHILIP GILBERT"></div>
+      </div>
+      </div>
+    </section>
   </body>
 </html>
