--- a/index.html
+++ b/index.html
@@ -49,28 +49,44 @@
             </ul>
           </nav>
         </div>
-
-        
-
-
-
-
       </div>
     </header>
 
     <section id="banner">
       <div class="container">
         <div id="me">
-        <div>
-          <h6>THIS IS ME</h6>
-          <h1>PHILIP GILBERT</h1>
-          <P>
-            You will begin to realise why this exercise is called the Dickens Pattern with reference to the ghost showing Scrooge some different futures.
-          </P>
-          <a href="#">DISCOVER NOW</a>
+          <div>
+            <h6>THIS IS ME</h6>
+            <h1>PHILIP GILBERT</h1>
+            <p>
+              You will begin to realise why this exercise is called the Dickens
+              Pattern with reference to the ghost showing Scrooge some different
+              futures.
+            </p>
+            <a href="#">DISCOVER NOW</a>
+          </div>
+          <div><img src="imgs/hero-img.png.webp" alt="PHILIP GILBERT" /></div>
         </div>
-        <div><img src="imgs/hero-img.png.webp" alt="PHILIP GILBERT"></div>
       </div>
+    </section>
+
+    <section id="about-me">
+      <div class="container">
+        <div id="details">
+          <div><img src="imgs/about-img.png.webp" alt="PHILIP GILBERT" /></div>
+          <div>
+            <h6>ABOUT ME</h6>
+            <h1>PERSONAL DETAILS</h1>
+            <p>
+              Here, I focus on a range of items and features that we use in life
+              without giving them a second thought. such as Coca Cola. Dolor sit
+              amet, consectetur adipisicing elit, sed do eiusmod tempor
+              incididunt ut labore et dolore magna aliqua. Ut enim ad minim
+              veniam, quis nostrud exercitation ullamco.
+            </p>
+            <a href="#">VIEW FULL DETAILS</a>
+          </div>
+        </div>
       </div>
     </section>
   </body>
