--- a/index.html
+++ b/index.html
@@ -89,5 +89,96 @@
         </div>
       </div>
     </section>
+
+    <section id="services" class="container">
+      <div>
+        <h1>My Offered Services</h1>
+        <p>
+          At about this time of year, some months after New Year’s resolutions
+          have been made and
+          <br />
+          kept, or made and neglected.
+        </p>
+      </div>
+
+      <div id="services-items">
+        <div>
+          <a href="#"
+            ><span
+              ><img src="imgs/icons8-circle-chart-35.png" alt="Circle Chart"
+            /></span>
+            <h4>Web Design</h4></a
+          >
+
+          <p>
+            “It is not because things are difficult that we do not dare; it is
+            because we do not dare that they are difficult.”
+          </p>
+        </div>
+        <div>
+          <a href="#"
+            ><span
+              ><img src="imgs/icons8-multiple-devices-24.png" alt="Devices"
+            /></span>
+            <h4>Web Development</h4></a
+          >
+
+          <p>
+            If you are an entrepreneur, you know that your success cannot depend
+            on the opinions of others. Like the wind, opinions.
+          </p>
+        </div>
+
+        <div>
+          <a href="#"
+            ><span><img src="imgs/icons8-camera-35.png" alt="Camera" /></span>
+            <h4>Photography</h4></a
+          >
+
+          <p>
+            Do you want to be even more successful? Learn to love learning and
+            growth. The more effort you put into improving your skills.
+          </p>
+        </div>
+
+        <div>
+          <a href="#"
+            ><span
+              ><img src="imgs/icons8-picture-35 (1).png" alt="Picture"
+            /></span>
+            <h4>Clipping Path</h4></a
+          >
+
+          <p>
+            Hypnosis quit smoking methods maintain caused quite a stir in the
+            medical world over the last two decades. There is a lot of argument.
+          </p>
+        </div>
+
+        <div>
+          <a href="#">
+            <span><img src="imgs/icons8-tablet-35.png" alt="Tablet" /></span>
+            <h4>Apps Iterface</h4>
+          </a>
+          <p>
+            Do you sometimes have the feeling that you’re running into the same
+            obstacles over and over again? Many of my conflicts.
+          </p>
+        </div>
+
+        <div>
+          <a href="#">
+            <span><img src="imgs/icons8-missile-35.png" alt="Missile" /></span>
+            <h4>Graphic Design</h4>
+          </a>
+
+          <p>
+            You’ve heard the expression, “Just believe it and it will come.”
+            Well, technically, that is true, however, ‘believing’ is not just
+            thinking that.
+          </p>
+        </div>
+      </div>
+    </section>
   </body>
 </html>
