--- a/index.html
+++ b/index.html
@@ -180,5 +180,26 @@
         </div>
       </div>
     </section>
+
+    <section id="resume">
+      <div class="container">
+        <div>
+          <h1>2536</h1>
+          <p>Projects Completed</p>
+        </div>
+        <div>
+          <h1>6784</h1>
+          <p>Happy Clients</p>
+        </div>
+        <div>
+          <h1>2239</h1>
+          <p>Cups of Coffee</p>
+        </div>
+        <div>
+          <h1>434</h1>
+          <p>Real Professionals</p>
+        </div>
+      </div>
+    </section>
   </body>
 </html>
