--- a/index.html
+++ b/index.html
@@ -201,5 +201,71 @@
         </div>
       </div>
     </section>
+
+    <section id="projects">
+      <div class="container">
+        <div>
+          <h1>Our Latest Featured Projects</h1>
+          <p>Who are in extremely love with eco friendly system.</p>
+        </div>
+
+        <div id="filters">
+          <nav>
+            <ul>
+              <li><a href="#">ALL</a></li>
+              <li><a href="#">VECTOR</a></li>
+              <li><a href="#">RASTER</a></li>
+              <li><a href="#">UI/UX</a></li>
+              <li><a href="#">PRINTING</a></li>
+            </ul>
+          </nav>
+        </div>
+
+        <div id="filters-content">
+          <div>
+            <img src="imgs/p1.jpg.webp" alt="Flower" />
+            <div>
+              <h4>2D Vinyl Design</h4>
+              <p>vector</p>
+            </div>
+          </div>
+          <div>
+            <img src="imgs/p2.jpg.webp" alt="Flower" />
+            <div>
+              <h4>2D Vinyl Design</h4>
+              <p>vector</p>
+            </div>
+          </div>
+          <div>
+            <img src="imgs/p3.jpg.webp" alt="Candy" />
+            <div>
+              <h4>Creative Poster Design</h4>
+              <p>Agency</p>
+            </div>
+          </div>
+          <div>
+            <img src="imgs/p4.jpg.webp" alt="Dog" />
+            <div>
+              <h4>Embosed Logo Design</h4>
+              <p>Portal</p>
+            </div>
+          </div>
+          <div>
+            <img src="imgs/p5.jpg.webp" alt="Flower" />
+            <div>
+              <h4>3D Helmet Design</h4>
+              <p>vector</p>
+            </div>
+          </div>
+          <div>
+            <img src="imgs/p6.jpg.webp" alt="" />
+            <div>
+              <h4>2D Vinyl Design</h4>
+              <p>raster</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
   </body>
 </html>
