--- a/index.html
+++ b/index.html
@@ -267,5 +267,46 @@
         </div>
       </div>
     </section>
+
+    <section id="feedback">
+      <div class="container">
+        <div>
+          <h1>Client’s Feedback About Me</h1>
+          <p>
+            It is very easy to start smoking but it is an uphill task to quit
+            it. Ask any chain smoker or even a person.
+          </p>
+        </div>
+
+        <div>
+          <div>
+            <div>
+              <div><img src="imgs/user2.png.webp" alt="" /></div>
+              <div class="comment">
+                <p>
+                  A purpose is the eternal condition for success. Every former
+                  smoker can tell you just how hard it is to stop smoking
+                  cigarettes. However.
+                </p>
+                <h4>Carolyn Craig</h4>
+                <p>CEO at Facebook</p>
+              </div>
+            </div>
+            <div >
+              <div><img src="imgs/user1.png.webp" alt="" /></div>
+              <div class="comment">
+                <p>
+                  Do you want to be even more successful? Learn to love learning
+                  and growth. The more effort you put into improving your
+                  skills, the bigger the payoff you.
+                </p>
+                <h4>Harriet Maxwell</h4>
+                <p>CEO at Google</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
   </body>
 </html>
