--- a/index.html
+++ b/index.html
@@ -292,7 +292,7 @@
                 <p>CEO at Facebook</p>
               </div>
             </div>
-            <div >
+            <div>
               <div><img src="imgs/user1.png.webp" alt="" /></div>
               <div class="comment">
                 <p>
@@ -303,6 +303,94 @@
                 <h4>Harriet Maxwell</h4>
                 <p>CEO at Google</p>
               </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section id="plan">
+      <div class="container">
+        <div>
+          <h1>Choose Your Plan</h1>
+          <p>
+            When someone does something that they know that they shouldn’t do,
+            did they.
+          </p>
+        </div>
+
+        <div id="price">
+          <div>
+            <div class="account-type">
+              <div>
+                <h1>01</h1>
+                <h4>Econemy</h4>
+                <p>For the individuals</p>
+              </div>
+
+              <div>
+                <ul>
+                  <li>Secure Online Transfer</li>
+                  <li>Unlimited Styles for interface</li>
+                  <li>Reliable Customer Service</li>
+                </ul>
+              </div>
+
+              <div><h2>£199.00</h2></div>
+            </div>
+
+            <div class="account-type">
+              <div>
+                <h1>02</h1>
+                <h4>Business</h4>
+                <p>For the individuals</p>
+              </div>
+
+              <div>
+                <ul>
+                  <li>Secure Online Transfer</li>
+                  <li>Unlimited Styles for interface</li>
+                  <li>Reliable Customer Service</li>
+                </ul>
+              </div>
+
+              <div><h2>£299.00</h2></div>
+            </div>
+
+            <div class="account-type">
+              <div>
+                <h1>03</h1>
+                <h4>Premium</h4>
+                <p>For the individuals</p>
+              </div>
+
+              <div>
+                <ul>
+                  <li>Secure Online Transfer</li>
+                  <li>Unlimited Styles for interface</li>
+                  <li>Reliable Customer Service</li>
+                </ul>
+              </div>
+
+              <div><h2>£399.00</h2></div>
+            </div>
+
+            <div class="account-type">
+              <div>
+                <h1>04</h1>
+                <h4>Exclusive</h4>
+                <p>For the individuals</p>
+              </div>
+
+              <div>
+                <ul>
+                  <li>Secure Online Transfer</li>
+                  <li>Unlimited Styles for interface</li>
+                  <li>Reliable Customer Service</li>
+                </ul>
+              </div>
+
+              <div><h2>£499.00</h2></div>
             </div>
           </div>
         </div>
