--- a/index.html
+++ b/index.html
@@ -396,5 +396,100 @@
         </div>
       </div>
     </section>
+
+    <section id="blog">
+      <div class="container">
+        <div>
+          <h1>Latest Posts From Our Blog</h1>
+
+          <p>
+            You may be a skillful, effective employer but if you don’t trust
+            your personnel and the opposite, then the
+            <br />
+            chances of improving and expanding the business
+          </p>
+        </div>
+
+        <div id="row">
+          <div class="blog-item">
+            <div>
+              <img src="imgs/b1.jpg.webp" alt="blog" />
+            </div>
+
+            <div class="details">
+              <div class="user">
+                <img src="imgs/user.png.webp" alt="" />
+                <a href="">Mark Wiens</a>
+              </div>
+
+              <div class="meta">
+                13th Dec
+                <span>15</span>
+
+                <a href="">04</a>
+              </div>
+            </div>
+
+            <a href="#"><h4>Break Through Self Doubt And Fear</h4></a>
+            <p>
+              Dream interpretation has many forms; it can be done be done for
+              the sake of fun, hobby or can be taken up as a serious career.
+            </p>
+          </div>
+
+          <div class="blog-item">
+            <div>
+              <img src="imgs/b2.jpg.webp" alt="blog" />
+            </div>
+
+            <div class="details">
+              <div class="user">
+                <img src="imgs/user.png.webp" alt="" />
+                <a href="">Mark Wiens</a>
+              </div>
+
+              <div class="meta">
+                13th Dec
+                <span>15</span>
+
+                <a href="">04</a>
+              </div>
+            </div>
+
+            <a href="#"><h4>PORTABLE FASHION FOR YOUNG WOMEN</h4></a>
+            <p>
+              You may be a skillful, effective employer but if you don’t trust
+              your personnel and the opposite, then the chances of improving.
+            </p>
+          </div>
+
+          <div class="blog-item">
+            <div>
+              <img src="imgs/b3.jpg.webp" alt="blog" />
+            </div>
+
+            <div class="details">
+              <div class="user">
+                <img src="imgs/user.png.webp" alt="" />
+                <a href="">Mark Wiens</a>
+              </div>
+
+              <div class="meta">
+                13th Dec
+                <span>15</span>
+
+                <a href="">04</a>
+              </div>
+            </div>
+
+            <a href="#"><h4>DO DREAMS SERVE AS A PREMONITION</h4></a>
+            <p>
+              So many of us are demotivated to achieve anything. Such people are
+              not enthusiastic about anything. They don’t want to work involved.
+            </p>
+          </div>
+        </div>
+      </div>
+    </section>
   </body>
 </html>
