--- a/index.html
+++ b/index.html
@@ -491,5 +491,29 @@
         </div>
       </div>
     </section>
+
+    <section id="brand">
+      <div class="container">
+        <div id="brand-item">
+          <div>
+            <a href="#"><img src="imgs/l1.png.webp" alt="" /></a>
+          </div>
+          <div>
+            <a href="#"><img src="imgs/l2.png.webp" alt="" /></a>
+          </div>
+          <div>
+            <a href="#"><img src="imgs/l3.png.webp" alt="" /></a>
+          </div>
+          <div>
+            <a href="#"><img src="imgs/l4.png.webp" alt="" /></a>
+          </div>
+          <div>
+            <a href="#"><img src="imgs/l5.png.webp" alt="" /></a>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    
   </body>
 </html>
