--- a/index.html
+++ b/index.html
@@ -514,6 +514,62 @@
       </div>
     </section>
 
-    
+    <footer>
+      <div class="container">
+        <div>
+          <h4>About Me</h4>
+          <p>
+            We have tested a number of registry fix and clean utilities and
+            present our top 3 list on our site for your convenience.
+          </p>
+          <p>
+            Copyright &COPY;2024 All rights reserved | This template is made
+            with by <a href="#">Colorlib</a>
+          </p>
+        </div>
+
+        <div>
+          <h4>Newsletter</h4>
+          <p>Stay updated with our latest trends</p>
+          <div>
+            <div>
+              <input
+                type="text"
+                id="email"
+                name="emailAddress"
+                placeholder="Enter Email Address"
+              />
+            </div>
+            <div>
+              <button class="button" type="submit"><span>→</span></button>
+            </div>
+          </div>
+        </div>
+
+        <div>
+          <h4>Follow Me</h4>
+          <p>Let us be social</p>
+
+          <div>
+            <div>
+              <a href="#">
+                <li>
+                  <img src="imgs/icons8-facebook-13.png" alt="facebook" />
+                </li>
+              </a>
+              <a href="#">
+                <li><img src="imgs/icons8-twitter-13.png" alt="twitter" /></li>
+              </a>
+              <a href="#">
+                <li><img src="imgs/icons8-dribble-13.png" alt="dribble" /></li>
+              </a>
+              <a href="#">
+                <li><img src="imgs/icons8-behance-13.png" alt="behance" /></li>
+              </a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
